--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aphrodite": "^2.4.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.7.0",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
