--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate-css-grid": "^1.4.3",
     "aphrodite": "^2.4.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.7.0",
