--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
