--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "animate-css-grid": "^1.4.3",
     "aphrodite": "^2.4.0",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.22.1",
     "firebase": "^8.7.0",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
@@ -19,6 +20,7 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
     "react-burger-menu": "^3.0.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
