--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,17 @@
     "firebase": "^8.7.0",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
-    "react": "^17.0.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
     "react-burger-menu": "^3.0.6",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-live-clock": "^5.2.0",
+    "react-moment": "^1.1.1",
     "react-popup": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
